syntax = "proto3";
option go_package = "user";

service UserService {
  rpc Register(user_register_request) returns (user_register_response); // 注册
  rpc Login(user_login_request) returns (user_login_response);          // 登录
  rpc GetUser(user_request) returns (user_response);                    // 获取用户信息
  rpc GetUserByToken(user_token_request) returns(user_response);
  rpc CheckValidToken(token_request) returns (token_response);          // Token鉴权
}


message user_register_request {
  string username = 1; //注册用户名，最长32个字符
  string password = 2; //密码，最长32个字符
}

message user_register_response {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message user_login_request {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码
}

message user_login_response {
  int64 user_id = 1; //用户id
  string token = 2; // 用户鉴权token
}

message user_request {
  int64 user_id = 1; //用户id
  string token = 2; //用户鉴权token
}

message user_response {
  User user = 1; //用户信息
}

message user_token_request {
  string token = 1;
}

message token_request {
  string token = 1; // 用户鉴权token
  string skip_check = 2; // 用于跳过校验userID
}

message token_response {
  bool is_valid = 1;
}

message User {
  int64 id = 1; //用户id
  string name = 2; //用户名称
  optional int64 follow_count = 3; //关注总数
  optional int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注， false-未关注
}